--- a/style.css
+++ b/style.css
@@ -14,15 +14,24 @@ header {
   padding: 1.5rem 3rem;
   justify-items: center;
 }
+
 nav {
   display: flex;
-  gap: 6rem;
+  gap: 4rem;
   justify-content: center;
-}
-.main_nav {
-  display: flex;
   align-items: center;
 }
+.nav-elements {
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
+  align-items: center;
+}
+.menu-icon {
+  visibility: hidden;
+  z-index: 101;
+}
+
 .nav-link:link,
 .nav-link:visited {
   display: inline-block;
@@ -33,22 +42,50 @@ nav {
 }
 .link-act:link,
 .link-act:visited {
-  padding: 1.2rem 2.4rem;
+  padding: 1rem 2.4rem;
   border-radius: 9px;
   color: #fff;
   background-color: rgba(56, 94, 189, 0.801);
-  margin-top: -1rem;
-  margin-bottom: 2rem;
 }
 .link-act:hover,
 .link-act:active {
   background-color: rgba(56, 94, 189, 0.801);
   box-shadow: inset 0 0 0 3px #dadae4;
 }
+.modal {
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+  align-items: center;
+  padding: 15rem;
+  background-color: rgba(255, 255, 255, 0.514);
+  color: #04081d;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  backdrop-filter: blur(2px);
+}
 
+.hidden {
+  display: none;
+}
+.modal ul {
+  line-height: 2;
+  list-style: none;
+}
+.modal ul a {
+  font-size: 3rem;
+  text-decoration: none;
+  color: #04081d;
+  font-weight: 600;
+}
 .hero-section {
   display: flex;
-  gap: 12rem;
+  gap: 10rem;
   justify-content: flex-end;
   padding: 6rem 4rem;
   background-color: #f6f6fc;
@@ -100,7 +137,6 @@ h1 {
 }
 .courses {
   background-color: #f6f6fc;
-  /* padding-top: 2rem; */
   padding-bottom: 6rem;
 }
 .heading3 {
@@ -110,7 +146,7 @@ h1 {
 }
 .courses-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: 4rem;
 }
 .container {
